created the method checkTimeLivingInCountry